test/files/neg/package-ob-case.check
package-ob-case.scala:3: warning: it is not recommended to define classes/objects inside of package objects.
If possible, define class X in package foo instead.
    case class X(z: Int) { }
               ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
